Api de cadastro de vendas de produtos
